_build/html/reports/4_Numeric_data_wrangling.log
Traceback (most recent call last):
  File "/Users/evanmuzzall/opt/anaconda3/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/evanmuzzall/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/evanmuzzall/opt/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/evanmuzzall/opt/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/evanmuzzall/opt/anaconda3/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/Users/evanmuzzall/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/evanmuzzall/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/evanmuzzall/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
pd.options(max.print=1000000)
------------------

[0;36m  Cell [0;32mIn[2], line 1[0;36m[0m
[0;31m    pd.options(max.print=1000000)[0m
[0m               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m expression cannot contain assignment, perhaps you meant "=="?

SyntaxError: expression cannot contain assignment, perhaps you meant "=="? (2867120414.py, line 1)

